--- a/app/src/main/res/layout/card_product.xml
+++ b/app/src/main/res/layout/card_product.xml
@@ -7,63 +7,58 @@
     android:weightSum="1">
 
     <android.support.v7.widget.CardView
-        android:layout_width="130dp"
+        android:layout_width="270dp"
         android:layout_height="160dp"
         android:layout_margin="10dp"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="10dp">
+        app:cardCornerRadius="2dp"
+        app:cardElevation="5dp"
+        app:contentPadding="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="1">
+            android:layout_weight="0.74"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.74"
-                android:orientation="horizontal">
+                android:layout_weight="0.37"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingLeft="6dp">
 
-                <ImageView
-                    android:id="@+id/productImage"
-                    android:layout_width="46dp"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/ic_menu_gallery" />
-
-                <LinearLayout
+                <TextView
+                    android:id="@+id/productTitle"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="0.37"
-                    android:gravity="center_vertical"
-                    android:orientation="vertical"
-                    android:paddingLeft="6dp">
+                    android:layout_height="wrap_content"
+                    android:text="Palm Bay"
+                    android:textColor="@android:color/black"
+                    android:textSize="24sp" />
 
-                    <TextView
-                        android:id="@+id/productTitle"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Palm Bay"
-                        android:textColor="@android:color/black"
-                        android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/productType"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Cocktail"
+                    android:textSize="16sp" />
 
-                    <TextView
-                        android:id="@+id/productType"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Cocktail" />
-
-                    <TextView
-                        android:id="@+id/productPrice"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="$5.99"
-                        android:textColor="@android:color/black"
-                        android:textSize="18sp" />
-                </LinearLayout>
-
+                <TextView
+                    android:id="@+id/productPrice"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="$5.99"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
             </LinearLayout>
+
+            <ImageView
+                android:id="@+id/productImage"
+                android:layout_width="90dp"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_menu_gallery" />
 
         </LinearLayout>
 
