--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#414141</color>
-    <color name="colorPrimaryDark">#704242</color>
-    <color name="colorAccent">#704242</color>
+    <!--<color name="colorPrimary">#414141</color>-->
+    <!--<color name="colorPrimaryDark">#704242</color>-->
+    <!--<color name="colorAccent">#704242</color>-->
+
+    <color name="colorPrimary">#607D8B</color>
+    <color name="colorPrimaryDark">#455A64</color>
+    <color name="colorAccent">#F5A623</color>
 </resources>
