--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -29,7 +29,7 @@
                 app:srcCompat="@mipmap/ic_launcher" />
 
             <TextView
-                android:id="@+id/titleLabel"
+                android:id="@+id/nameLabel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="TextView"
@@ -135,78 +135,120 @@
                 android:id="@+id/fabtoolbar_fab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:fabSize="normal"
-                android:src="@drawable/abc_ic_menu_share_mtrl_alpha"/>
+                android:src="@drawable/abc_ic_menu_share_mtrl_alpha"
+                app:elevation="5dp"
+                app:fabSize="normal" />
 
         </RelativeLayout>
 
         <LinearLayout
             android:id="@+id/fabtoolbar_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="160dp"
             android:layout_alignParentBottom="true"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:paddingLeft="25dp"
+            android:paddingRight="25dp"
+            android:paddingTop="15dp">
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/nameLabel2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="10dp"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:layout_weight="1"
+                android:text="TextView"
+                android:textColor="@android:color/white"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:gravity="left|center_vertical"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/quantityLabel"
+                    android:id="@+id/priceLabel2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Quantity" />
+                    android:layout_marginRight="20dp"
+                    android:layout_weight="1"
+                    android:text="TextView" />
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="20dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="30dp"
+                    android:layout_weight="1"
                     android:orientation="horizontal">
 
                     <Button
                         android:id="@+id/minusButton"
                         android:layout_width="40dp"
-                        android:layout_height="25dp"
+                        android:layout_height="40dp"
+                        android:layout_weight="1"
                         android:background="@drawable/button_white_borders"
-                        android:text="-" />
+                        android:text="-"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/quantityValue"
                         android:layout_width="40dp"
-                        android:layout_height="25dp"
+                        android:layout_height="40dp"
                         android:layout_weight="1"
-                        android:background="@drawable/button_white_borders"
                         android:gravity="center"
-                        android:text="1" />
+                        android:text="1"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold" />
 
                     <Button
                         android:id="@+id/plusButton"
                         android:layout_width="40dp"
-                        android:layout_height="25dp"
+                        android:layout_height="40dp"
                         android:layout_weight="1"
                         android:background="@drawable/button_white_borders"
-                        android:text="+" />
+                        android:text="+"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/white"
+                        android:textStyle="bold" />
+
                 </LinearLayout>
+
             </LinearLayout>
 
-            <Button
-                android:id="@+id/addToCartButton"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="10dp"
                 android:layout_weight="1"
-                android:background="@color/colorPrimaryDark"
-                android:text="Add to Cart"
-                android:textAllCaps="false"
-                android:textColor="@android:color/white" />
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/cancelButton"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:text="Cancel"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorPrimary" />
+
+                <Button
+                    android:id="@+id/addToCartButton"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:text="Add to Cart"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorPrimary" />
+            </LinearLayout>
 
         </LinearLayout>
 
