--- a/app/src/main/res/layout/card_search_result.xml
+++ b/app/src/main/res/layout/card_search_result.xml
@@ -11,12 +11,13 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="5dp"
         android:orientation="horizontal"
-        android:paddingLeft="10dp">
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
         <ImageView
             android:id="@+id/productImage"
-            android:layout_width="80dp"
-            android:layout_height="112dp"
+            android:layout_width="98dp"
+            android:layout_height="132dp"
             app:srcCompat="@drawable/ic_menu_gallery" />
 
         <LinearLayout
@@ -36,7 +37,6 @@
                     android:id="@+id/productTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingRight="5dp"
                     android:text="Beau's Lug Tread Lagered Ale"
                     android:textColor="@color/searchProductLabel"
                     android:textSize="18sp"
@@ -97,6 +97,7 @@
             android:id="@+id/productStock"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
             android:layout_weight="0.95"
             android:text="69 in stock near you"
             android:textColor="@color/darkGrey" />
@@ -105,8 +106,11 @@
             android:id="@+id/favouriteButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
             android:layout_weight="0.05"
             android:background="@android:color/transparent"
+            android:paddingBottom="6px"
+            android:paddingTop="6px"
             android:src="@drawable/ic_favorite_black_24dp"
             android:tint="@color/notFavourite" />
 
