--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -171,12 +171,16 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Total: " />
+
+                <TextView
                     android:id="@+id/priceLabel2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="20dp"
-                    android:layout_weight="1"
-                    android:text="TextView" />
+                    android:layout_weight="1"/>
 
                 <LinearLayout
                     android:layout_width="20dp"
